--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <script src="app.js" defer></script>
     
+  
   </body>
 </html>
