adds image rendering functionality

--- a/index.html
+++ b/index.html
@@ -19,16 +19,8 @@
         </ol>
       </section>
       <section class="center">
-        <div class="img-display">
-          <div class="img-container">
-            <img src="https://www.fillmurray.com/474/322" alt="">
-          </div>
-          <div class="img-container">
-            <img src="https://www.fillmurray.com/474/322" alt="">
-          </div>
-          <div class="img-container">
-            <img src="https://www.fillmurray.com/474/322" alt="">
-          </div>
+        <div id="img-display">
+          
         </div>
         <div class="spacer"></div>
         <div class="lorem">
