--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <section id="results">
-        <button type="button">Results</button>
+        <button>Show Results</button>
         <ul id="results-list">
         </ul>
       </section>
