adds basic chart functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
       </section>
 
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <canvas id="myChart" width="400" height="400"></canvas>
     <footer>
       <h1>Bigfoot</h1>
     </footer>
