minor edits/ cleanups

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         
       </section>
       <section id="results">
-        <button id="revealer" hidden>Show Results</button>
+        <div>
+          <button id="revealer" hidden>Show Results</button>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <div id="chart-area" hidden>
           <canvas id="myChart" width="1200" height="600"></canvas>
